--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -3,7 +3,7 @@
         <div class="image" style="background-image: url(../images/{{image}})"></div>
       {{#each tags}}
           <a href="{{url}}" target="_blank" title="{{name}}" class="tag" style="color: {{color}}">
-              <i class="fa fa-{{icon}}"></i>
+              <i class="icon-{{icon}}"></i>
           </a>
       {{/each}}
         <h4><a href='{{url}}' target='_blank'>{{name}}</a></h4>
