--- a/app/templates/social.hbs
+++ b/app/templates/social.hbs
@@ -1,5 +1,5 @@
 {{#each social}}
     <a href="{{url}}" title="{{name}}" target="_blank" class="social-link">
-        <i class="fa fa-fw fa-{{icon}}"></i>
+        <i class="icon-{{icon}}"></i>
     </a>
 {{/each}}
