--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -156,7 +156,7 @@ body {
       float: left;
       border-radius: 2px;
       margin-right: 15px;
-      background: #E8E8E8 center;
+      background: #ffffff center;
       background-size: cover;
       @media #{$mobile} {
         display: none;
