--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 @import "fonts";
+@import "sprite";
 
 $left: 300px;
 $right: 1024px - $left;
@@ -133,6 +134,7 @@ body {
   @media #{$mobile} {
     width: 100%;
     left:0;
+    padding: 15px;
   }
 
   h3 {
@@ -156,8 +158,6 @@ body {
       float: left;
       border-radius: 2px;
       margin-right: 15px;
-      background: #ffffff center;
-      background-size: cover;
       @media #{$mobile} {
         display: none;
       }
