--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -158,6 +158,7 @@ body {
       float: left;
       border-radius: 2px;
       margin-right: 15px;
+      background-size: 300px;
       @media #{$mobile} {
         display: none;
       }
