--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -1,6 +1,6 @@
 {{#each projects}}
     <div class="project">
-        <div class="image sprite sprite-{{image}}"></div>
+        <div class="image image-{{image}}"></div>
       {{#each tags}}
           <a href="{{url}}" target="_blank" title="{{name}}" class="tag" style="color: {{color}}">
               <i class="icon-{{icon}}"></i>
