--- a/styles/style.css
+++ b/styles/style.css
@@ -1,33 +1,127 @@
-@import url('https://fonts.googleapis.com/css?family=Voces');
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
+@import url("https://code.getmdl.io/1.3.0/material.indigo-pink.min.css");
+@import url("https://cdn.plyr.io/2.0.13/plyr.css");
+@import "./base";
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: inherit;
+}
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Voces', sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
 
-.social {
+html {
+    background-image: url('https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+.banner {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    height: 100vh;
+    min-height: 600px;
+    padding: 0 40px;
+    background-color: rgba(0, 0, 0, 0.93);
+    color: #fff;
+  }
+
+  button {
+    background-color: #2196F3;
+    border: 0;
+    padding: 8px 20px;
+    color: #fff;
     font-size: 14px;
+    border-radius: 2px;
+    margin: 0 10px;
+    margin-bottom: 40px;
+    cursor: pointer;
+    outline: none;
+  }
+
+  button:hover {
+    background-color: #2398f5;
+  }
+
+  .screenshots {
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    min-height: 500px;
+    flex: 1;
+    max-width: 1100px;
+    flex-wrap: wrap;
+    margin: 0 auto;
+}
+
+.screenshot-img {
+    flex: 1;
+}
+
+.demo-card-square.mdl-card {
+    width: 320px;
+    height: 320px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.screenshot-img>div {
     width: 100%;
-    padding-bottom: 30px;
-    max-width: 200px;
+    height: 100%;
+    background-position: 50%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    border-bottom: 1px solid #eee;
 }
 
-.social i {
-    color: white;
-    background-color: #888;
-    width: 32px;
-    border-radius: 50%;
-    height: 32px;
-    padding: 9px 0;
-    text-align: center;
+.oss-wrapper {
+    background-color: #673AB7;
+    padding-top: 30px;
+    padding-bottom: 80px;
 }
 
-.social i:hover {
-    background-color: #e43a79;
+.mdl-card__supporting-text {
+    width: 100%;
 }
 
+.mdl-card__actions .source {
+    float: right;
+    margin-right: 8px;
+}
+
+.mdl-card__actions .mdl-button--icon {
+    font-size: 16px;
+}
+
+.social-home {
+    width: 300px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.social-home i {
+    color: #fff;    
+    padding: 15px;
+}
+
+.ReactModal__Overlay {
+    z-index: 9;
+}
+
+body.ReactModal__Body--open {
+    overflow: hidden;
+}
+
+.mdl-list__item {
+    color: #fff;
+}
+
+.mdl-list__item--three-line .mdl-list__item-text-body {
+    color: #fff;
+    margin-top: 5px;
+}
