--- a/styles/base.css
+++ b/styles/base.css
@@ -34,13 +34,14 @@
 }
 
 .social i {
-    color: white;
-    background-color: #888;
-    width: 32px;
+    color: #fff;
+    background-color: #4a4a4a;
+    width: 38px;
     border-radius: 50%;
-    height: 32px;
+    height: 38px;
     padding: 9px 0;
     text-align: center;
+    font-size: 20px;
 }
 
 .social i:hover {
