--- a/styles/base.css
+++ b/styles/base.css
@@ -1,27 +1,10 @@
-/* latin-ext */
-@font-face {
-    font-family: 'Voces';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Voces Regular'), local('Voces-Regular'), url(https://fonts.gstatic.com/s/voces/v6/AnuNijxZRJzStOAzJZaP3oDGDUGfDkXyfkzVDelzfFk.woff2) format('woff2');
-    unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-  }
-  /* latin */
-  @font-face {
-    font-family: 'Voces';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Voces Regular'), local('Voces-Regular'), url(https://fonts.gstatic.com/s/voces/v6/S7BRMLrMJeacLC2l-eHYF6CWcynf_cDxXwCLxiixG1c.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
-  }
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Voces', sans-serif;
+    font-family: 'Roboto Slab', sans-serif;
 }
 
 .social {
