--- a/styles/base.css
+++ b/styles/base.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
+
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto Slab', sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
 
 .social {
@@ -29,4 +32,24 @@
 
 .social i:hover {
     background-color: #e43a79;
+}
+
+.back {
+    position: fixed;
+    display: inline-block;
+    padding: 16px;
+    color: #fff;
+    transition: all .2s;
+}
+
+.back i {
+    margin-right: 10px;
+}
+
+.back:hover {
+    font-size: 17px;
+}
+
+.oss .experience {
+    font-size: 14px;
 }
