--- a/styles/base.css
+++ b/styles/base.css
@@ -37,17 +37,19 @@
 .back {
     position: fixed;
     display: inline-block;
-    padding: 16px;
+    padding: 7px 10px;
     color: #fff !important;
-    transition: all .2s;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 900px) {
+    .back{
+        right: 0;
+    }
 }
 
 .back i {
     margin-right: 10px;
-}
-
-.back:hover {
-    font-size: 17px;
 }
 
 .oss .experience {
