--- a/styles/style.css
+++ b/styles/style.css
@@ -71,7 +71,7 @@ button:hover {
 }
 
 .oss-wrapper {
-  background-color: #ff8f00;
+  background-color: #029688;
   padding-bottom: 60px;
   margin-top: -152px;
   padding-top: 150px;
