--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,13 @@ button:hover {
   padding-top: 150px;
 }
 
+@media screen and (max-width: 700px) {
+    .oss-wrapper {
+        padding-top: 30px;
+        margin-top: 0;
+    }
+}
+
 .mdl-card__supporting-text {
   width: 100%;
   line-height: 20px;
